# tconnectsync

./: .coverage  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Pipfile  README.md  setup.cfg
.claude/: settings.json
.claude-bw/: PLANNING.md
.github/workflows/: publish-docker.yml  publish-pypi.yml  python-package.yml
tconnectsync/: __init__.py  check.py  nightscout.py  secret.py
tconnectsync/api/: __init__.py  tandemsource.py
tconnectsync/domain/tandemsource/: pump_settings.py
tconnectsync/eventparser/: build_events.py  events.json  events.py  generic.py  raw_event.py  transforms.py
tconnectsync/parser/: nightscout.py
tconnectsync/sync/tandemsource/: autoupdate.py  choose_device.py  cli_helpers.py  helpers.py  process.py  process_alarm.py  process_basal.py  process_basal_resume.py  process_basal_suspension.py  process_bolus.py  process_cartridge.py  process_cgm_alert.py  process_cgm_reading.py  process_cgm_start_join_stop.py  process_device_status.py  process_user_mode.py  update_profiles.py
tests/: test_nightscout.py
tests/api/: fake.py  test_tandemsource.py
tests/domain/tandemsource/: test_pump_settings.py
tests/eventparser/: test_from_json.py
tests/eventparser/events/: test_lidaadailystatus.py  test_lidaapcmchange.py  test_lidaausermodechange.py  test_lidalarmactivated.py  test_lidalarmcleared.py  test_lidalertactivated.py  test_lidalertcleared.py  test_lidbasaldelivery.py  test_lidbgreadingtaken.py  test_lidbolusactivated.py  test_lidboluscompleted.py  test_lidbolusdelivery.py  test_lidcannulafilled.py  (+17 more)
tests/parser/: test_nightscout.py
(+15 files in other folders)
