[metadata]
name = tconnectsync
version = 2.3.5
author = James Woglom
author_email = j@wogloms.net
description = Syncs Tandem Source (formerly t:connect) insulin pump data to Nightscout for the t:slim X2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jwoglom/tconnectsync
project_urls =
    Bug Tracker = https://github.com/jwoglom/tconnectsync/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.12
install_requires =
    requests
    bs4
    arrow
    lxml>=6.1.0
    python-dotenv
    requests-mock
    pysocks
    urllib3>=2.7.0
    requests-oidc
    # [crypto] extras pulls cryptography for RS256 JWT verification in extract_jwt()
    # upper bound to guard against 3.x breaking changes; revisit after changelog review
    PyJWT[crypto]>=2.9,<3
    dataclasses-json

[options.packages.find]
where = .
exclude =
    tests*
    scripts*

[options.entry_points]
console_scripts =
    tconnectsync = tconnectsync:main
